<resources>
    <string name="app_name">Werwolf V2</string>
    <string name="descriptionFreunde">Die Freunde sehen sich in der ersten Runde. So wissen sie, das sie unschuldig sind. Stirbt einer der Freunde, leben die anderen weiter.</string>
    <string name="descriptionRitter">Stirbt der Ritter, so stirbt in der nächsten Runde der nächste Werwolf rechts des Ritters.</string>
    <string name="descriptionUrwolf">Der Urwolf handelt wie ein normaler Werwolf. Zusätzlich kann er einmal pro Spiel ein Opfer in einen Werwolf verwandeln. Das Opfer stirbt dann nicht und wacht ab sofort mit den Werwölfen zusammen auf.</string>
    <string name="descriptionFloetenspieler">Der bezaubernde Flötenspieler wacht jede Nacht auf und darf einen Spieler verzaubern. Hat er alle Mitspieler verzaubert gewinnt er.  !!!Der Flötenspieler ist der Beste!!!</string>
    <string name="descriptionMaedchen">Das Mädchen darf während die Werwölfe wach sind versuchen diese zu sehen. Es sollte sich nicht erwischen lassen.</string>
    <string name="descriptionWeisserWerwolf">Der weiße Werwolf wacht jede zweite Nacht auf darf einen der Werwölfe töten. Sein Ziel ist es alleiniger Überlebender zu sein.</string>
    <string name="descriptionJaeger">Stirbt der Jaeger kann er eine weitere Person mit in den Tot reißen.</string>
    <string name="descriptionJunges">Das Werwolf-Junge wählt zu Beginn der Runde ein Vorbild aus. Solange dieses Vorbild lebt ist das Werwolf-Junge ein normaler Bürger. wird das Vorbild getötet wird das Junge zum Werwolf und wacht ab sofort mit diesen in der Nacht auf.</string>
    <string name="descriptionWerwolf">Die Werwölfe wachen jede Nacht auf und bestimmen gemeinsam ein Opfer, welches daraufhn stirbt.</string>
    <string name="descriptionBuerger">Der Bürger schläft die ganze Nacht.</string>
    <string name="descriptionSeher">Der Seher wacht jede Nacht auf und wählt eine Person aus, deren Karte er sehen möchte. Der Spielleiter zeigt dem Seher diese Karte.</string>
    <string name="descriptionDieb">Der Dieb wählt jede Nacht eine Person aus bei der er selbige verbringt. Er kann dann nur sterben, wenn die Person, bei der er übernachtet getötet wird.</string>
    <string name="descriptionWaechter">Der Wächter wählt jede Nacht eine Person aus, die er beschützt. Er kann dann nur sterben, wenn die Person, die er beschützt getötet wird. Die zu beschützende Person überlebt.</string>
    <string name="descriptionHexe">Die Hexe besitzt zwei Tränke, die sie jeweils einmal pro Spiel einsetzen kann. Einer rettet dem, von den Werwölfen ausgewählten Opfer das Leben, der andere tötet eine von der Hexe wählbare Person.</string>
    <string name="descriptionAmor">Der Amor darf einmal zu Beginn des Spieles ein Liebespaar bestimmen, welches das restliche Spiel zusammenarbeiten. Stirbt einer der beiden Partner stirbt auch der andere.</string>
    <string name="werwolf">Werwolf</string>
    <string name="versionNumber">Version 2.0</string>
    <string name="mit_karten">Mit Karten</string>
    <string name="spielleiter">Spielleiter</string>
    <string name="ohne_karten">Ohne Karten</string>
    <string name="spieler">Spieler</string>
    <string name="anleitung">Anleitung</string>
    <string name="gesamt_standartwert">Gesamt: 0</string>
    <string name="weiter">Weiter</string>
    <string name="zahl_0">0</string>
    <string name="buerger">Bürger</string>
    <string name="amor">Amor</string>
    <string name="hexe">Hexe</string>
    <string name="waechter">Wächter</string>
    <string name="maedchen">Mädchen</string>
    <string name="seher">Seher</string>
    <string name="dieb">Dieb</string>
    <string name="jaeger">Jäger</string>
    <string name="ritter">Ritter</string>
    <string name="floetenspieler">Flötenspieler</string>
    <string name="freunde">Freunde</string>
    <string name="weisser_werwolf">Weißer Werwolf</string>
    <string name="junges">Junges</string>
    <string name="urwolf">Urwolf</string>
    <string name="dorf">Dorf</string>
    <string name="einschlafen">Das ganze Dorf schläft ein.</string>
    <string name="opfer_verwandeln">Opfer verwandeln</string>
    <string name="opfer_retten">Opfer retten</string>
    <string name="weitere_person_t_ten">weitere Person Töten</string>
    <string name="name_eingeben">Name eingeben</string>
    <string name="person_einf_gen">Person einfügen</string>
    <string name="startbildschirm">Startbildschirm</string>
    <string name="name">Name</string>
    <string name="bereit">Bereit</string>
    <string name="verbunden_nw_hle_deinen_spielernamen_und_best_tige_mit_bereit">Verbunden Wähle deinen Spielernamen und bestätige mit BEREIT.</string>
    <string name="warten_auf_andere_spieler">warten auf andere Spieler</string>
    <string name="dreiPunkte">…</string>
    <string name="scanne_den_qr_code_des_spielleiters_um_dich_zu_verbinden">Scanne den QR-Code des Spielleiters um dich zu Verbinden.</string>
    <string name="charakterkarte_dr_cken_und_halten_um_eigene_rolle_zu_sehen">Charakterkarte drücken und halten um eigene Rolle zu sehen.</string>
    <string name="mitspielerAnzahl">Mitspieler: 0 von Max</string>


    <string name="numberWrapper">%1$d</string>
    <string name="combinedWrapper">Gesamt %1$d</string>
    <string name="nameWrapper">" %1$s"</string>
    <string name="victoryError">Fehler</string>
    <string name="victoryWhiteWolf">Der Weiße Werwolf hat das Spiel alleine gewonnen.</string>
    <string name="VictoryLovers">Das Liebespaar hat sich gegen alle Anderen durchgesetzt! Sie sind wirklich wie füreinander geschaffen.</string>
    <string name="VictoryWolfes">Die Werwölfe sind in Überzahl. Das Dorf liegt in ihrer Herrschaft, damit haben sie gewonnen!</string>
    <string name="VictoryCiticens">Alle Werwölfe sind tot. Die Bürger haben gewonnen! Ab jetzt können sie wieder ruhig schlafen.</string>
    <string name="VictoryFlute">Der Flötenspieler hat alle anderen Spieler verzaubert! Er hat gewonnen!</string>
    <string name="pressBackAgain">Um die App zu schließen Taste erneut drücken.</string>
    <string name="village">Dorf</string>
    <string name="manual_text_without_cards">Wie in II.Karten beschrieben muss die Anzahl der verschiedenen Charaktere sowie die Namen der mitspielenden Personen eingegeben werden.\n\nDie App lost jeder Person dann eine Rolle zu. Nacheinander wird je ein Namen, sowie dessen Karte ausgegeben. Der Spielleiter weckt die entsprechende Person und zeigt die Karte. Jeder Mitspieler muss sie sich merken. Sie kann nicht erneut gezeigt werden.</string>

    <string name="night_desc_werwolf">Jetzt wachen die Werwölfe auf und suchen sich ihr Opfer für diese Nacht aus. Haben sie sich entschieden schlafen sie auch schon wieder ein.</string>
    <string name="night_desc_citizen">Abstimmphase, wen wählt das Dorf als Schuldigen aus? </string>
    <string name="night_desc_armor">Als erstes erwacht der Amor und zeigt auf zwei Personen, die sich augenblicklich unsterblich ineinander verlieben. - Amor schläft wieder ein. Ich tippe die beiden verliebten jetzt an un sie schauen sich tief in die Augen. - Auch sie schlafen jetzt wieder ein.</string>
    <string name="night_desc_witch">Als nächstes wacht die Hexe auf. Sie kann das Opfer -auf Opfer zeigen- retten, nichtstun, oder  eine weitere Person mit in den Tod reißen. -Dabei die drei Handzeichen für die Hexe sichtbar vormachen.</string>
    <string name="night_desc_guardian">Der Wächter wählt eine Person, die er diese Nacht beschützen möchte. - Der Wächter schläft wieder ein.</string>
    <string name="night_desc_girl">empty</string>
    <string name="night_desc_seher">Als nächstes wacht der Seher auf und zeigt auf eine Person, deren Karte er sehen möchte. Wenn er sie gesehen hat schläft er wieder ein.</string>
    <string name="night_desc_thief">Jetzt erwacht der Dieb und sucht sich eine Person aus, bei der er oder sie die Nacht verbringen möchten. - Er zeigt auf diese Person und schläft danach wieder ein.</string>
    <string name="night_desc_hunter">Der Jäger ist gestorben. Er darf eine weitere Person töten:</string>
    <string name="night_desc_knight">Der Ritter ist letzte Nacht gestorben. Wähle jetzt den nächsten Werwolf zur rechten das verstorbenen Jägers aus.</string>
    <string name="night_desc_flute">Zuletzt erwacht der bezaubernde Flötenspieler und darf eine Person seiner Wahl verzaubern. Hat er alle Mitspieler verzaubert gewinnt er.</string>
    <string name="night_desc_friends">Ich tippe alle Freunde kurz an. - Jetzt erwachen die Freunde und schauen sich an, um sich später wiederzuerkennen. - Die Freunde schlafen beruhigt wieder ein, da sie wisssen, dass sie nicht alleine sind.</string>
    <string name="night_desc_wolf_child">"Das Werwolfjunge erwacht und sucht sich ein Vorbild aus. Sollte dieses Vorbild sterben, wirst du auch ein Werwolf und wachst gemeinsam mit ihnen auf. -\n Das Junge schläft wieder."
          </string>

    <string name="night_desc_sleeping">Das ganze Dorf schläft ein.</string>
</resources>
