<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tobias.werwolf_v1.Startbildschirm"
    android:background="@color/grey"
    >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/werwolf"
        android:textSize="72sp"
        android:layout_above="@id/textViewVersionsNummer"/>

    <TextView
        android:id="@+id/textViewVersionsNummer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/versionNumber"
        android:textSize="16sp"
        android:layout_marginBottom="32dp"
        android:layout_above="@id/linearlayout"/>

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="24dp"
            android:background="@drawable/knopf_grau">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/mit_karten"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/weiss"/>

            <Button
                android:id="@+id/spielleiterEinzeln"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/knopf_hellgruen"
                android:gravity="center"
                android:text="@string/spielleiter"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"

                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/knopf_grau">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ohne_karten"
                android:gravity="center"
                android:textColor="@color/weiss"
                android:textSize="25sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>



            <Button
                android:id="@+id/spielleiterServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/knopf_orange"
                android:gravity="center"
                android:text="@string/spielleiter"
                android:textSize="20sp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/spieler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/knopf_gelb"
                android:gravity="center"
                android:text="@string/spieler"
                android:textSize="20sp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"/>


        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/handbuch_knopf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/anleitung"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="@drawable/knopf_blau"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"/>



</RelativeLayout>
