<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray">

    <LinearLayout
        android:id="@+id/layoutModusPerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_rounded_corners"
        android:backgroundTint="@color/green"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textModusPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/spielleiter"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/llo"
        android:layout_below="@id/layoutModusPerson"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/button_rounded_corners"
        android:backgroundTint="@color/gray">

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/name_eingeben"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="textVisiblePassword"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/weiter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/person_einf_gen"
            android:background="@drawable/button_rounded_corners"
            android:backgroundTint="@color/blue"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>


    <TextView
        android:layout_below="@id/llo"
        android:id="@+id/anzahlPersoenenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/anzahlPersoenenText"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <ListView
            android:id="@+id/listePers"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </RelativeLayout>

</RelativeLayout>



