<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tobias.werwolf_v1.Spieler_Karte"
    android:background="@color/grey">

    <LinearLayout
        android:id="@+id/layoutModus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/leiste_gelb"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textModus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/spieler"
            android:textColor="@color/schwarz"
            android:textSize="21sp"
            android:textStyle="bold" />
    </LinearLayout>


    <com.example.tobias.werwolf_v1.SquareLayout
        android:id="@+id/layoutKarteSpieler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutModus"
        android:focusable="true">

        <TextView
            android:id="@+id/charakterKarte"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/knopf_orange"
            android:clickable="true"
            android:gravity="center"
            android:text=""
            android:textColor="@color/weiss"
            android:textSize="40sp"
            android:focusable="true" />
    </com.example.tobias.werwolf_v1.SquareLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/charakterkarte_dr_cken_und_halten_um_eigene_rolle_zu_sehen"
        android:textColor="@color/weiss"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/statbildschirmbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/statbildschirmbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/knopf_blau"
        android:gravity="center"
        android:text="@string/startbildschirm"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
